Bluetooth: hci_dev: replace 'quirks' integer by 'quirk_flags' bitmap (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2249,6 +2249,7 @@
 	patches.kernel.org/6.15.8-136-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_.patch
 	patches.kernel.org/6.15.8-137-Bluetooth-hci_core-fix-typos-in-macros.patch
 	patches.kernel.org/6.15.8-138-Bluetooth-hci_core-add-missing-braces-when-usi.patch
+	patches.kernel.org/6.15.8-139-Bluetooth-hci_dev-replace-quirks-integer-by-qu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
