--- a/series.conf
+++ b/series.conf
@@ -2207,6 +2207,7 @@
 	patches.kernel.org/6.15.8-094-comedi-Fix-some-signed-shift-left-operations.patch
 	patches.kernel.org/6.15.8-095-comedi-Fix-use-of-uninitialized-data-in-insn_r.patch
 	patches.kernel.org/6.15.8-096-comedi-Fix-initialization-of-data-for-instruct.patch
+	patches.kernel.org/6.15.8-097-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
