tls: always refresh the queue when reading sock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2262,6 +2262,7 @@
 	patches.kernel.org/6.15.8-149-Bluetooth-L2CAP-Fix-attempting-to-adjust-outgo.patch
 	patches.kernel.org/6.15.8-150-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCONF.patch
 	patches.kernel.org/6.15.8-151-virtio-net-fix-recursived-rtnl_lock-during-pro.patch
+	patches.kernel.org/6.15.8-152-tls-always-refresh-the-queue-when-reading-sock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
