--- a/series.conf
+++ b/series.conf
@@ -2294,6 +2294,7 @@
 	patches.kernel.org/6.15.8-181-cifs-Fix-the-smbd_response-slab-to-allow-userc.patch
 	patches.kernel.org/6.15.8-182-cifs-Fix-reading-into-an-ITER_FOLIOQ-from-the-.patch
 	patches.kernel.org/6.15.8-183-sched-freezer-Remove-unnecessary-warning-in-__.patch
+	patches.kernel.org/6.15.8-184-sched-ext-Prevent-update_locked_rq-calls-with-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
