--- a/series.conf
+++ b/series.conf
@@ -2120,6 +2120,7 @@
 	patches.kernel.org/6.15.8-007-usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.kernel.org/6.15.8-008-usb-dwc2-gadget-Fix-enter-to-hibernation-for-U.patch
 	patches.kernel.org/6.15.8-009-usb-gadget-configfs-Fix-OOB-read-on-empty-stri.patch
+	patches.kernel.org/6.15.8-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
