--- a/series.conf
+++ b/series.conf
@@ -2161,6 +2161,7 @@
 	patches.kernel.org/6.15.8-048-net-mlx5-Update-the-list-of-the-PCI-supported-.patch
 	patches.kernel.org/6.15.8-049-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-050-arm64-dts-add-big-endian-property-back-into-wa.patch
+	patches.kernel.org/6.15.8-051-arm64-dts-freescale-imx8mm-verdin-Keep-LDO5-al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
