--- a/series.conf
+++ b/series.conf
@@ -2156,6 +2156,7 @@
 	patches.kernel.org/6.15.8-043-Fix-SMB311-posix-special-file-creation-to-serv.patch
 	patches.kernel.org/6.15.8-044-mptcp-make-fallback-action-and-fallback-decisi.patch
 	patches.kernel.org/6.15.8-045-mptcp-plug-races-between-subflow-fail-and-subf.patch
+	patches.kernel.org/6.15.8-046-mptcp-reset-fallback-status-gracefully-at-disc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
