comedi: das6402: Fix bit shift out of bounds (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2201,6 +2201,7 @@
 	patches.kernel.org/6.15.8-088-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.15.8-089-comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.15.8-090-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
+	patches.kernel.org/6.15.8-091-comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
