soundwire: amd: fix for handling slave alerts after link is down (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2209,6 +2209,7 @@
 	patches.kernel.org/6.15.8-096-comedi-Fix-initialization-of-data-for-instruct.patch
 	patches.kernel.org/6.15.8-097-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 	patches.kernel.org/6.15.8-098-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
+	patches.kernel.org/6.15.8-099-soundwire-amd-fix-for-handling-slave-alerts-af.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
