--- a/series.conf
+++ b/series.conf
@@ -2124,6 +2124,7 @@
 	patches.kernel.org/6.15.8-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.kernel.org/6.15.8-012-i2c-omap-Handle-omap_i2c_init-errors-in-omap_i.patch
 	patches.kernel.org/6.15.8-013-i2c-omap-Fix-an-error-handling-path-in-omap_i2.patch
+	patches.kernel.org/6.15.8-014-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
