USB: serial: ftdi_sio: add support for NDI EMGUIDE GEMINI (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2116,6 +2116,7 @@
 	patches.kernel.org/6.15.8-003-phy-tegra-xusb-Disable-periodic-tracking-on-Te.patch
 	patches.kernel.org/6.15.8-004-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
 	patches.kernel.org/6.15.8-005-USB-serial-option-add-Foxconn-T99W640.patch
+	patches.kernel.org/6.15.8-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
