--- a/series.conf
+++ b/series.conf
@@ -8736,6 +8736,7 @@
 	patches.kernel.org/6.12.40-085-arm64-dts-imx95-Correct-the-DMA-interrupter-n.patch
 	patches.kernel.org/6.12.40-086-bpf-Reject-p-format-string-in-bprintf-like-he.patch
 	patches.kernel.org/6.12.40-087-selftests-sched_ext-Fix-exit-selftest-hang-on.patch
+	patches.kernel.org/6.12.40-088-cachefiles-Fix-the-incorrect-return-value-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
