arm64: dts: rockchip: Add cd-gpios for sdcard detect on Cool Pi CM5 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8729,6 +8729,7 @@
 	patches.kernel.org/6.12.40-078-comedi-Fix-some-signed-shift-left-operations.patch
 	patches.kernel.org/6.12.40-079-comedi-Fix-use-of-uninitialized-data-in-insn_.patch
 	patches.kernel.org/6.12.40-080-comedi-Fix-initialization-of-data-for-instruc.patch
+	patches.kernel.org/6.12.40-081-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
