nvme: fix inconsistent RCU list manipulation in nvme_ns_add_to_ctrl_list() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8743,6 +8743,7 @@
 	patches.kernel.org/6.12.40-092-rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.kernel.org/6.12.40-093-smb-client-fix-use-after-free-in-cifs_oplock_.patch
 	patches.kernel.org/6.12.40-094-fix-a-leak-in-fcntl_dirnotify.patch
+	patches.kernel.org/6.12.40-095-nvme-fix-inconsistent-RCU-list-manipulation-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
