pch_uart: Fix dma_sync_sg_for_device() nents value (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8666,6 +8666,7 @@
 	patches.kernel.org/6.12.40-015-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
 	patches.kernel.org/6.12.40-016-nvmem-layouts-u-boot-env-remove-crc32-endiann.patch
 	patches.kernel.org/6.12.40-017-Input-xpad-set-correct-controller-type-for-Ac.patch
+	patches.kernel.org/6.12.40-018-pch_uart-Fix-dma_sync_sg_for_device-nents-val.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
