--- a/series.conf
+++ b/series.conf
@@ -8704,6 +8704,7 @@
 	patches.kernel.org/6.12.40-053-memstick-core-Zero-initialize-id_reg-in-h_mem.patch
 	patches.kernel.org/6.12.40-054-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.12.40-055-mmc-sdhci-pci-Quirk-for-broken-command-queuin.patch
+	patches.kernel.org/6.12.40-056-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
