drm/xe/pf: Sanitize VF scratch registers on FLR (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8770,6 +8770,7 @@
 	patches.kernel.org/6.12.40-119-ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delr.patch
 	patches.kernel.org/6.12.40-120-net-fix-segmentation-after-TCP-UDP-fraglist-G.patch
 	patches.kernel.org/6.12.40-121-netfilter-nf_conntrack-fix-crash-due-to-remov.patch
+	patches.kernel.org/6.12.40-122-drm-xe-pf-Sanitize-VF-scratch-registers-on-FL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
