usb: hub: Don't try to recover devices lost during warm reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8793,6 +8793,7 @@
 	patches.kernel.org/6.12.40-142-usb-hub-fix-detection-of-high-tier-USB3-devic.patch
 	patches.kernel.org/6.12.40-143-usb-hub-Fix-flushing-and-scheduling-of-delaye.patch
 	patches.kernel.org/6.12.40-144-usb-hub-Fix-flushing-of-delayed-work-used-for.patch
+	patches.kernel.org/6.12.40-145-usb-hub-Don-t-try-to-recover-devices-lost-dur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
