--- a/series.conf
+++ b/series.conf
@@ -8744,6 +8744,7 @@
 	patches.kernel.org/6.12.40-093-smb-client-fix-use-after-free-in-cifs_oplock_.patch
 	patches.kernel.org/6.12.40-094-fix-a-leak-in-fcntl_dirnotify.patch
 	patches.kernel.org/6.12.40-095-nvme-fix-inconsistent-RCU-list-manipulation-i.patch
+	patches.kernel.org/6.12.40-096-nvme-fix-endianness-of-command-word-prints-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
