--- a/series.conf
+++ b/series.conf
@@ -8806,6 +8806,7 @@
 	patches.kernel.org/6.12.40-155-drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.kernel.org/6.12.40-156-drm-xe-Move-page-fault-init-after-topology-in.patch
 	patches.kernel.org/6.12.40-157-smb-client-let-smbd_post_send_iter-respect-th.patch
+	patches.kernel.org/6.12.40-158-iommu-vt-d-Fix-misplaced-domain_attached-assi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
