--- a/series.conf
+++ b/series.conf
@@ -8773,6 +8773,7 @@
 	patches.kernel.org/6.12.40-122-drm-xe-pf-Sanitize-VF-scratch-registers-on-FL.patch
 	patches.kernel.org/6.12.40-123-drm-xe-pf-Move-VFs-reprovisioning-to-worker.patch
 	patches.kernel.org/6.12.40-124-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prio.patch
+	patches.kernel.org/6.12.40-125-Bluetooth-L2CAP-Fix-attempting-to-adjust-outg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
