--- a/series.conf
+++ b/series.conf
@@ -8682,6 +8682,7 @@
 	patches.kernel.org/6.12.40-031-drm-amd-display-Free-memory-allocation.patch
 	patches.kernel.org/6.12.40-032-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-1.patch
 	patches.kernel.org/6.12.40-033-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix.patch
+	patches.kernel.org/6.12.40-034-io_uring-poll-fix-POLLERR-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
