--- a/series.conf
+++ b/series.conf
@@ -8652,6 +8652,7 @@
 	patches.kernel.org/6.12.40-001-phy-tegra-xusb-Fix-unbalanced-regulator-disab.patch
 	patches.kernel.org/6.12.40-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_O.patch
 	patches.kernel.org/6.12.40-003-phy-tegra-xusb-Disable-periodic-tracking-on-T.patch
+	patches.kernel.org/6.12.40-004-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
