soundwire: amd: fix for clearing command status register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8732,6 +8732,7 @@
 	patches.kernel.org/6.12.40-081-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 	patches.kernel.org/6.12.40-082-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 	patches.kernel.org/6.12.40-083-soundwire-amd-fix-for-handling-slave-alerts-a.patch
+	patches.kernel.org/6.12.40-084-soundwire-amd-fix-for-clearing-command-status.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
