can: tcan4x5x: fix reset gpio usage during probe (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8751,6 +8751,7 @@
 	patches.kernel.org/6.12.40-100-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
 	patches.kernel.org/6.12.40-101-wifi-cfg80211-remove-scan-request-n_channels-.patch
 	patches.kernel.org/6.12.40-102-can-tcan4x5x-add-option-for-selecting-nWKRQ-v.patch
+	patches.kernel.org/6.12.40-103-can-tcan4x5x-fix-reset-gpio-usage-during-prob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
