usb: hub: Fix flushing of delayed work used for post resume purposes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8792,6 +8792,7 @@
 	patches.kernel.org/6.12.40-141-btrfs-fix-block-group-refcount-race-in-btrfs_.patch
 	patches.kernel.org/6.12.40-142-usb-hub-fix-detection-of-high-tier-USB3-devic.patch
 	patches.kernel.org/6.12.40-143-usb-hub-Fix-flushing-and-scheduling-of-delaye.patch
+	patches.kernel.org/6.12.40-144-usb-hub-Fix-flushing-of-delayed-work-used-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
