phy: tegra: xusb: Disable periodic tracking on Tegra234 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8651,6 +8651,7 @@
 	patches.kernel.org/6.12.39-167-Linux-6.12.39.patch
 	patches.kernel.org/6.12.40-001-phy-tegra-xusb-Fix-unbalanced-regulator-disab.patch
 	patches.kernel.org/6.12.40-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_O.patch
+	patches.kernel.org/6.12.40-003-phy-tegra-xusb-Disable-periodic-tracking-on-T.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
