--- a/series.conf
+++ b/series.conf
@@ -8661,6 +8661,7 @@
 	patches.kernel.org/6.12.40-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.kernel.org/6.12.40-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.kernel.org/6.12.40-012-thunderbolt-Fix-wake-on-connect-at-runtime.patch
+	patches.kernel.org/6.12.40-013-thunderbolt-Fix-bit-masking-in-tb_dp_port_set.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
