net: emaclite: Fix missing pointer increment in aligned_read() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8737,6 +8737,7 @@
 	patches.kernel.org/6.12.40-086-bpf-Reject-p-format-string-in-bprintf-like-he.patch
 	patches.kernel.org/6.12.40-087-selftests-sched_ext-Fix-exit-selftest-hang-on.patch
 	patches.kernel.org/6.12.40-088-cachefiles-Fix-the-incorrect-return-value-in-.patch
+	patches.kernel.org/6.12.40-089-net-emaclite-Fix-missing-pointer-increment-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
