tracing/osnoise: Fix crash in timerlat_dump_stack() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8674,6 +8674,7 @@
 	patches.kernel.org/6.12.40-023-HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.kernel.org/6.12.40-024-tracing-probes-Avoid-using-params-uninitializ.patch
 	patches.kernel.org/6.12.40-025-tracing-Add-down_write-trace_event_sem-when-a.patch
+	patches.kernel.org/6.12.40-026-tracing-osnoise-Fix-crash-in-timerlat_dump_st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
