--- a/series.conf
+++ b/series.conf
@@ -8787,6 +8787,7 @@
 	patches.kernel.org/6.12.40-136-drm-mediatek-only-announce-AFBC-if-really-sup.patch
 	patches.kernel.org/6.12.40-137-libbpf-Fix-handling-of-BPF-arena-relocations.patch
 	patches.kernel.org/6.12.40-138-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-.patch
+	patches.kernel.org/6.12.40-139-sched-Change-nr_uninterruptible-type-to-unsig.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
