--- a/series.conf
+++ b/series.conf
@@ -8716,6 +8716,7 @@
 	patches.kernel.org/6.12.40-065-soc-aspeed-lpc-snoop-Don-t-disable-channels-t.patch
 	patches.kernel.org/6.12.40-066-iio-accel-fxls8962af-Fix-use-after-free-in-fx.patch
 	patches.kernel.org/6.12.40-067-iio-adc-axp20x_adc-Add-missing-sentinel-to-AX.patch
+	patches.kernel.org/6.12.40-068-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
