usb: net: sierra: check for no status endpoint (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8756,6 +8756,7 @@
 	patches.kernel.org/6.12.40-105-hwmon-corsair-cpro-Validate-the-size-of-the-r.patch
 	patches.kernel.org/6.12.40-106-ice-add-NULL-check-in-eswitch-lag-check.patch
 	patches.kernel.org/6.12.40-107-ice-check-correct-pointer-in-fwlog-debugfs.patch
+	patches.kernel.org/6.12.40-108-usb-net-sierra-check-for-no-status-endpoint.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
