pmdomain: governor: Consider CPU latency tolerance from pm_domain_cpu_gov (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8709,6 +8709,7 @@
 	patches.kernel.org/6.12.40-058-net-libwx-remove-duplicate-page_pool_put_full.patch
 	patches.kernel.org/6.12.40-059-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 	patches.kernel.org/6.12.40-060-net-libwx-properly-reset-Rx-ring-descriptor.patch
+	patches.kernel.org/6.12.40-061-pmdomain-governor-Consider-CPU-latency-tolera.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
