--- a/series.conf
+++ b/series.conf
@@ -8733,6 +8733,7 @@
 	patches.kernel.org/6.12.40-082-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 	patches.kernel.org/6.12.40-083-soundwire-amd-fix-for-handling-slave-alerts-a.patch
 	patches.kernel.org/6.12.40-084-soundwire-amd-fix-for-clearing-command-status.patch
+	patches.kernel.org/6.12.40-085-arm64-dts-imx95-Correct-the-DMA-interrupter-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
