net: libwx: remove duplicate page_pool_put_full_page() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8706,6 +8706,7 @@
 	patches.kernel.org/6.12.40-055-mmc-sdhci-pci-Quirk-for-broken-command-queuin.patch
 	patches.kernel.org/6.12.40-056-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.kernel.org/6.12.40-057-net-stmmac-intel-populate-entire-system_count.patch
+	patches.kernel.org/6.12.40-058-net-libwx-remove-duplicate-page_pool_put_full.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
