--- a/series.conf
+++ b/series.conf
@@ -8750,6 +8750,7 @@
 	patches.kernel.org/6.12.40-099-nvme-fix-misaccounting-of-nvme-mpath-inflight.patch
 	patches.kernel.org/6.12.40-100-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
 	patches.kernel.org/6.12.40-101-wifi-cfg80211-remove-scan-request-n_channels-.patch
+	patches.kernel.org/6.12.40-102-can-tcan4x5x-add-option-for-selecting-nWKRQ-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
