--- a/series.conf
+++ b/series.conf
@@ -8657,6 +8657,7 @@
 	patches.kernel.org/6.12.40-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUI.patch
 	patches.kernel.org/6.12.40-007-usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.kernel.org/6.12.40-008-usb-dwc2-gadget-Fix-enter-to-hibernation-for-.patch
+	patches.kernel.org/6.12.40-009-usb-gadget-configfs-Fix-OOB-read-on-empty-str.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
