--- a/series.conf
+++ b/series.conf
@@ -8753,6 +8753,7 @@
 	patches.kernel.org/6.12.40-102-can-tcan4x5x-add-option-for-selecting-nWKRQ-v.patch
 	patches.kernel.org/6.12.40-103-can-tcan4x5x-fix-reset-gpio-usage-during-prob.patch
 	patches.kernel.org/6.12.40-104-selftests-net-increase-inter-packet-timeout-i.patch
+	patches.kernel.org/6.12.40-105-hwmon-corsair-cpro-Validate-the-size-of-the-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
