--- a/series.conf
+++ b/series.conf
@@ -8676,6 +8676,7 @@
 	patches.kernel.org/6.12.40-025-tracing-Add-down_write-trace_event_sem-when-a.patch
 	patches.kernel.org/6.12.40-026-tracing-osnoise-Fix-crash-in-timerlat_dump_st.patch
 	patches.kernel.org/6.12.40-027-objtool-rust-add-one-more-noreturn-Rust-funct.patch
+	patches.kernel.org/6.12.40-028-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
