--- a/series.conf
+++ b/series.conf
@@ -8672,6 +8672,7 @@
 	patches.kernel.org/6.12.40-021-HID-core-ensure-the-allocated-report-buffer-c.patch
 	patches.kernel.org/6.12.40-022-HID-core-ensure-__hid_request-reserves-the-re.patch
 	patches.kernel.org/6.12.40-023-HID-core-do-not-bypass-hid_hw_raw_request.patch
+	patches.kernel.org/6.12.40-024-tracing-probes-Avoid-using-params-uninitializ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
