--- a/series.conf
+++ b/series.conf
@@ -8782,6 +8782,7 @@
 	patches.kernel.org/6.12.40-131-net-sched-Return-NULL-when-htb_lookup_leaf-en.patch
 	patches.kernel.org/6.12.40-132-rxrpc-Fix-recv-recv-race-of-completed-call.patch
 	patches.kernel.org/6.12.40-133-rxrpc-Fix-transmission-of-an-abort-in-respons.patch
+	patches.kernel.org/6.12.40-134-Revert-cgroup_freezer-cgroup_freezing-Check-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
