drm/xe/pf: Prepare to stop SR-IOV support prior GT reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8772,6 +8772,7 @@
 	patches.kernel.org/6.12.40-121-netfilter-nf_conntrack-fix-crash-due-to-remov.patch
 	patches.kernel.org/6.12.40-122-drm-xe-pf-Sanitize-VF-scratch-registers-on-FL.patch
 	patches.kernel.org/6.12.40-123-drm-xe-pf-Move-VFs-reprovisioning-to-worker.patch
+	patches.kernel.org/6.12.40-124-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
