sched,freezer: Remove unnecessary warning in __thaw_task (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8802,6 +8802,7 @@
 	patches.kernel.org/6.12.40-151-i2c-omap-Fix-an-error-handling-path-in-omap_i.patch
 	patches.kernel.org/6.12.40-152-i2c-omap-Handle-omap_i2c_init-errors-in-omap_.patch
 	patches.kernel.org/6.12.40-153-i2c-omap-fix-deprecated-of_property_read_bool.patch
+	patches.kernel.org/6.12.40-154-sched-freezer-Remove-unnecessary-warning-in-_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
