i2c: omap: Add support for setting mux (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8798,6 +8798,7 @@
 	patches.kernel.org/6.12.40-147-net-libwx-fix-multicast-packets-received-coun.patch
 	patches.kernel.org/6.12.40-148-rust-use-used-compiler-to-fix-build-and-modpo.patch
 	patches.kernel.org/6.12.40-149-selftests-bpf-Set-test-path-for-token-obj_pri.patch
+	patches.kernel.org/6.12.40-150-i2c-omap-Add-support-for-setting-mux.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
