--- a/series.conf
+++ b/series.conf
@@ -8663,6 +8663,7 @@
 	patches.kernel.org/6.12.40-012-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.kernel.org/6.12.40-013-thunderbolt-Fix-bit-masking-in-tb_dp_port_set.patch
 	patches.kernel.org/6.12.40-014-Revert-staging-vchiq_arm-Create-keep-alive-th.patch
+	patches.kernel.org/6.12.40-015-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
