--- a/series.conf
+++ b/series.conf
@@ -8670,6 +8670,7 @@
 	patches.kernel.org/6.12.40-019-spi-Add-check-for-8-bit-transfer-with-8-IO-mo.patch
 	patches.kernel.org/6.12.40-020-dm-bufio-fix-sched-in-atomic-context.patch
 	patches.kernel.org/6.12.40-021-HID-core-ensure-the-allocated-report-buffer-c.patch
+	patches.kernel.org/6.12.40-022-HID-core-ensure-__hid_request-reserves-the-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
