rust: use `#[used(compiler)]` to fix build and `modpost` with Rust >= 1.89.0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8796,6 +8796,7 @@
 	patches.kernel.org/6.12.40-145-usb-hub-Don-t-try-to-recover-devices-lost-dur.patch
 	patches.kernel.org/6.12.40-146-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
 	patches.kernel.org/6.12.40-147-net-libwx-fix-multicast-packets-received-coun.patch
+	patches.kernel.org/6.12.40-148-rust-use-used-compiler-to-fix-build-and-modpo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
