--- a/series.conf
+++ b/series.conf
@@ -8779,6 +8779,7 @@
 	patches.kernel.org/6.12.40-128-tls-always-refresh-the-queue-when-reading-soc.patch
 	patches.kernel.org/6.12.40-129-net-vlan-fix-VLAN-0-refcount-imbalance-of-tog.patch
 	patches.kernel.org/6.12.40-130-net-bridge-Do-not-offload-IGMP-MLD-messages.patch
+	patches.kernel.org/6.12.40-131-net-sched-Return-NULL-when-htb_lookup_leaf-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
