af_packet: fix the SO_SNDTIMEO constraint not effective on tpacked_snd() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8695,6 +8695,7 @@
 	patches.kernel.org/6.12.40-044-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-045-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-046-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-r.patch
+	patches.kernel.org/6.12.40-047-af_packet-fix-the-SO_SNDTIMEO-constraint-not-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
