iio: accel: fxls8962af: Fix use after free in fxls8962af_fifo_flush (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8714,6 +8714,7 @@
 	patches.kernel.org/6.12.40-063-smb-client-fix-use-after-free-in-crypt_messag.patch
 	patches.kernel.org/6.12.40-064-soc-aspeed-lpc-snoop-Cleanup-resources-in-sta.patch
 	patches.kernel.org/6.12.40-065-soc-aspeed-lpc-snoop-Don-t-disable-channels-t.patch
+	patches.kernel.org/6.12.40-066-iio-accel-fxls8962af-Fix-use-after-free-in-fx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
