mmc: sdhci-pci: Quirk for broken command queuing on Intel GLK-based Positivo models (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8703,6 +8703,7 @@
 	patches.kernel.org/6.12.40-052-isofs-Verify-inode-mode-when-loading-from-dis.patch
 	patches.kernel.org/6.12.40-053-memstick-core-Zero-initialize-id_reg-in-h_mem.patch
 	patches.kernel.org/6.12.40-054-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
+	patches.kernel.org/6.12.40-055-mmc-sdhci-pci-Quirk-for-broken-command-queuin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
