--- a/series.conf
+++ b/series.conf
@@ -8726,6 +8726,7 @@
 	patches.kernel.org/6.12.40-075-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.12.40-076-comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.12.40-077-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-.patch
+	patches.kernel.org/6.12.40-078-comedi-Fix-some-signed-shift-left-operations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
