wifi: cfg80211: remove scan request n_channels counted_by (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8749,6 +8749,7 @@
 	patches.kernel.org/6.12.40-098-net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.kernel.org/6.12.40-099-nvme-fix-misaccounting-of-nvme-mpath-inflight.patch
 	patches.kernel.org/6.12.40-100-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
+	patches.kernel.org/6.12.40-101-wifi-cfg80211-remove-scan-request-n_channels-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
