comedi: aio_iiro_16: Fix bit shift out of bounds (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8722,6 +8722,7 @@
 	patches.kernel.org/6.12.40-071-iio-backend-fix-out-of-bound-write.patch
 	patches.kernel.org/6.12.40-072-iio-common-st_sensors-Fix-use-of-uninitialize.patch
 	patches.kernel.org/6.12.40-073-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
+	patches.kernel.org/6.12.40-074-comedi-aio_iiro_16-Fix-bit-shift-out-of-bound.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
