comedi: Fail COMEDI_INSNLIST ioctl if n_insns is too large (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8725,6 +8725,7 @@
 	patches.kernel.org/6.12.40-074-comedi-aio_iiro_16-Fix-bit-shift-out-of-bound.patch
 	patches.kernel.org/6.12.40-075-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.12.40-076-comedi-das6402-Fix-bit-shift-out-of-bounds.patch
+	patches.kernel.org/6.12.40-077-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
