rxrpc: Fix transmission of an abort in response to an abort (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8781,6 +8781,7 @@
 	patches.kernel.org/6.12.40-130-net-bridge-Do-not-offload-IGMP-MLD-messages.patch
 	patches.kernel.org/6.12.40-131-net-sched-Return-NULL-when-htb_lookup_leaf-en.patch
 	patches.kernel.org/6.12.40-132-rxrpc-Fix-recv-recv-race-of-completed-call.patch
+	patches.kernel.org/6.12.40-133-rxrpc-Fix-transmission-of-an-abort-in-respons.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
