iio: adc: max1363: Reorder mode_list[] entries (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8717,6 +8717,7 @@
 	patches.kernel.org/6.12.40-066-iio-accel-fxls8962af-Fix-use-after-free-in-fx.patch
 	patches.kernel.org/6.12.40-067-iio-adc-axp20x_adc-Add-missing-sentinel-to-AX.patch
 	patches.kernel.org/6.12.40-068-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_.patch
+	patches.kernel.org/6.12.40-069-iio-adc-max1363-Reorder-mode_list-entries.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
