--- a/series.conf
+++ b/series.conf
@@ -8702,6 +8702,7 @@
 	patches.kernel.org/6.12.40-051-dmaengine-nbpfaxi-Fix-memory-corruption-in-pr.patch
 	patches.kernel.org/6.12.40-052-isofs-Verify-inode-mode-when-loading-from-dis.patch
 	patches.kernel.org/6.12.40-053-memstick-core-Zero-initialize-id_reg-in-h_mem.patch
+	patches.kernel.org/6.12.40-054-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
