--- a/series.conf
+++ b/series.conf
@@ -8777,6 +8777,7 @@
 	patches.kernel.org/6.12.40-126-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCON.patch
 	patches.kernel.org/6.12.40-127-virtio-net-fix-recursived-rtnl_lock-during-pr.patch
 	patches.kernel.org/6.12.40-128-tls-always-refresh-the-queue-when-reading-soc.patch
+	patches.kernel.org/6.12.40-129-net-vlan-fix-VLAN-0-refcount-imbalance-of-tog.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
