s390/bpf: Fix bpf_arch_text_poke() with new_addr == NULL again (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8710,6 +8710,7 @@
 	patches.kernel.org/6.12.40-059-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 	patches.kernel.org/6.12.40-060-net-libwx-properly-reset-Rx-ring-descriptor.patch
 	patches.kernel.org/6.12.40-061-pmdomain-governor-Consider-CPU-latency-tolera.patch
+	patches.kernel.org/6.12.40-062-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
