af_packet: fix soft lockup issue caused by tpacket_snd() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8696,6 +8696,7 @@
 	patches.kernel.org/6.12.40-045-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-046-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-r.patch
 	patches.kernel.org/6.12.40-047-af_packet-fix-the-SO_SNDTIMEO-constraint-not-.patch
+	patches.kernel.org/6.12.40-048-af_packet-fix-soft-lockup-issue-caused-by-tpa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
