riscv: traps_misaligned: properly sign extend value in misaligned load handler (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8759,6 +8759,7 @@
 	patches.kernel.org/6.12.40-108-usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.kernel.org/6.12.40-109-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
 	patches.kernel.org/6.12.40-110-riscv-Enable-interrupt-during-exception-handl.patch
+	patches.kernel.org/6.12.40-111-riscv-traps_misaligned-properly-sign-extend-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
