--- a/series.conf
+++ b/series.conf
@@ -8694,6 +8694,7 @@
 	patches.kernel.org/6.12.40-043-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-044-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-045-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fr.patch
+	patches.kernel.org/6.12.40-046-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
