--- a/series.conf
+++ b/series.conf
@@ -8808,6 +8808,7 @@
 	patches.kernel.org/6.12.40-157-smb-client-let-smbd_post_send_iter-respect-th.patch
 	patches.kernel.org/6.12.40-158-iommu-vt-d-Fix-misplaced-domain_attached-assi.patch
 	patches.kernel.org/6.12.40-159-KVM-x86-xen-Fix-cleanup-logic-in-emulation-of.patch
+	patches.kernel.org/6.12.40-160-Linux-6.12.40.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
