KVM: x86/xen: Fix cleanup logic in emulation of Xen schedop poll hypercalls (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8807,6 +8807,7 @@
 	patches.kernel.org/6.12.40-156-drm-xe-Move-page-fault-init-after-topology-in.patch
 	patches.kernel.org/6.12.40-157-smb-client-let-smbd_post_send_iter-respect-th.patch
 	patches.kernel.org/6.12.40-158-iommu-vt-d-Fix-misplaced-domain_attached-assi.patch
+	patches.kernel.org/6.12.40-159-KVM-x86-xen-Fix-cleanup-logic-in-emulation-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
