smb: client: fix use-after-free in crypt_message when using async crypto (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8711,6 +8711,7 @@
 	patches.kernel.org/6.12.40-060-net-libwx-properly-reset-Rx-ring-descriptor.patch
 	patches.kernel.org/6.12.40-061-pmdomain-governor-Consider-CPU-latency-tolera.patch
 	patches.kernel.org/6.12.40-062-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr.patch
+	patches.kernel.org/6.12.40-063-smb-client-fix-use-after-free-in-crypt_messag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
