usb: musb: fix gadget state on disconnect (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8655,6 +8655,7 @@
 	patches.kernel.org/6.12.40-004-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
 	patches.kernel.org/6.12.40-005-USB-serial-option-add-Foxconn-T99W640.patch
 	patches.kernel.org/6.12.40-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUI.patch
+	patches.kernel.org/6.12.40-007-usb-musb-fix-gadget-state-on-disconnect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
