--- a/series.conf
+++ b/series.conf
@@ -8803,6 +8803,7 @@
 	patches.kernel.org/6.12.40-152-i2c-omap-Handle-omap_i2c_init-errors-in-omap_.patch
 	patches.kernel.org/6.12.40-153-i2c-omap-fix-deprecated-of_property_read_bool.patch
 	patches.kernel.org/6.12.40-154-sched-freezer-Remove-unnecessary-warning-in-_.patch
+	patches.kernel.org/6.12.40-155-drm-xe-mocs-Initialize-MOCS-index-early.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
