mptcp: make fallback action and fallback decision atomic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8683,6 +8683,7 @@
 	patches.kernel.org/6.12.40-032-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-1.patch
 	patches.kernel.org/6.12.40-033-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix.patch
 	patches.kernel.org/6.12.40-034-io_uring-poll-fix-POLLERR-handling.patch
+	patches.kernel.org/6.12.40-035-mptcp-make-fallback-action-and-fallback-decis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
