--- a/series.conf
+++ b/series.conf
@@ -8738,6 +8738,7 @@
 	patches.kernel.org/6.12.40-087-selftests-sched_ext-Fix-exit-selftest-hang-on.patch
 	patches.kernel.org/6.12.40-088-cachefiles-Fix-the-incorrect-return-value-in-.patch
 	patches.kernel.org/6.12.40-089-net-emaclite-Fix-missing-pointer-increment-in.patch
+	patches.kernel.org/6.12.40-090-block-fix-kobject-leak-in-blk_unregister_queu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
