efivarfs: Fix memory leak of efivarfs_fs_info in fs_context error paths (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8786,6 +8786,7 @@
 	patches.kernel.org/6.12.40-135-drm-mediatek-Add-wait_event_timeout-when-disa.patch
 	patches.kernel.org/6.12.40-136-drm-mediatek-only-announce-AFBC-if-really-sup.patch
 	patches.kernel.org/6.12.40-137-libbpf-Fix-handling-of-BPF-arena-relocations.patch
+	patches.kernel.org/6.12.40-138-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
