--- a/series.conf
+++ b/series.conf
@@ -8795,6 +8795,7 @@
 	patches.kernel.org/6.12.40-144-usb-hub-Fix-flushing-of-delayed-work-used-for.patch
 	patches.kernel.org/6.12.40-145-usb-hub-Don-t-try-to-recover-devices-lost-dur.patch
 	patches.kernel.org/6.12.40-146-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
+	patches.kernel.org/6.12.40-147-net-libwx-fix-multicast-packets-received-coun.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
