--- a/series.conf
+++ b/series.conf
@@ -8742,6 +8742,7 @@
 	patches.kernel.org/6.12.40-091-net-sched-sch_qfq-Fix-race-condition-on-qfq_a.patch
 	patches.kernel.org/6.12.40-092-rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.kernel.org/6.12.40-093-smb-client-fix-use-after-free-in-cifs_oplock_.patch
+	patches.kernel.org/6.12.40-094-fix-a-leak-in-fcntl_dirnotify.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
