--- a/series.conf
+++ b/series.conf
@@ -8678,6 +8678,7 @@
 	patches.kernel.org/6.12.40-027-objtool-rust-add-one-more-noreturn-Rust-funct.patch
 	patches.kernel.org/6.12.40-028-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-th.patch
 	patches.kernel.org/6.12.40-029-drm-amdgpu-Increase-reset-counter-only-on-suc.patch
+	patches.kernel.org/6.12.40-030-drm-amd-display-Disable-CRTC-degamma-LUT-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
