USB: serial: option: add Foxconn T99W640 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8653,6 +8653,7 @@
 	patches.kernel.org/6.12.40-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_O.patch
 	patches.kernel.org/6.12.40-003-phy-tegra-xusb-Disable-periodic-tracking-on-T.patch
 	patches.kernel.org/6.12.40-004-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
+	patches.kernel.org/6.12.40-005-USB-serial-option-add-Foxconn-T99W640.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
