--- a/series.conf
+++ b/series.conf
@@ -8705,6 +8705,7 @@
 	patches.kernel.org/6.12.40-054-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.12.40-055-mmc-sdhci-pci-Quirk-for-broken-command-queuin.patch
 	patches.kernel.org/6.12.40-056-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
+	patches.kernel.org/6.12.40-057-net-stmmac-intel-populate-entire-system_count.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
