smb: client: let smbd_post_send_iter() respect the peers max_send_size and transmit all data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8805,6 +8805,7 @@
 	patches.kernel.org/6.12.40-154-sched-freezer-Remove-unnecessary-warning-in-_.patch
 	patches.kernel.org/6.12.40-155-drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.kernel.org/6.12.40-156-drm-xe-Move-page-fault-init-after-topology-in.patch
+	patches.kernel.org/6.12.40-157-smb-client-let-smbd_post_send_iter-respect-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
