net: phy: Don't register LEDs for genphy (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8746,6 +8746,7 @@
 	patches.kernel.org/6.12.40-095-nvme-fix-inconsistent-RCU-list-manipulation-i.patch
 	patches.kernel.org/6.12.40-096-nvme-fix-endianness-of-command-word-prints-in.patch
 	patches.kernel.org/6.12.40-097-smc-Fix-various-oops-due-to-inet_sock-type-co.patch
+	patches.kernel.org/6.12.40-098-net-phy-Don-t-register-LEDs-for-genphy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
