--- a/series.conf
+++ b/series.conf
@@ -8762,6 +8762,7 @@
 	patches.kernel.org/6.12.40-111-riscv-traps_misaligned-properly-sign-extend-v.patch
 	patches.kernel.org/6.12.40-112-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_re.patch
 	patches.kernel.org/6.12.40-113-Bluetooth-hci_sync-fix-connectable-extended-a.patch
+	patches.kernel.org/6.12.40-114-Bluetooth-SMP-If-an-unallowed-command-is-rece.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
