--- a/series.conf
+++ b/series.conf
@@ -8685,6 +8685,7 @@
 	patches.kernel.org/6.12.40-034-io_uring-poll-fix-POLLERR-handling.patch
 	patches.kernel.org/6.12.40-035-mptcp-make-fallback-action-and-fallback-decis.patch
 	patches.kernel.org/6.12.40-036-mptcp-plug-races-between-subflow-fail-and-sub.patch
+	patches.kernel.org/6.12.40-037-mptcp-reset-fallback-status-gracefully-at-dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
