--- a/series.conf
+++ b/series.conf
@@ -8799,6 +8799,7 @@
 	patches.kernel.org/6.12.40-148-rust-use-used-compiler-to-fix-build-and-modpo.patch
 	patches.kernel.org/6.12.40-149-selftests-bpf-Set-test-path-for-token-obj_pri.patch
 	patches.kernel.org/6.12.40-150-i2c-omap-Add-support-for-setting-mux.patch
+	patches.kernel.org/6.12.40-151-i2c-omap-Fix-an-error-handling-path-in-omap_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
