comedi: Fix use of uninitialized data in insn_rw_emulate_bits() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8727,6 +8727,7 @@
 	patches.kernel.org/6.12.40-076-comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.12.40-077-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-.patch
 	patches.kernel.org/6.12.40-078-comedi-Fix-some-signed-shift-left-operations.patch
+	patches.kernel.org/6.12.40-079-comedi-Fix-use-of-uninitialized-data-in-insn_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
