--- a/series.conf
+++ b/series.conf
@@ -8790,6 +8790,7 @@
 	patches.kernel.org/6.12.40-139-sched-Change-nr_uninterruptible-type-to-unsig.patch
 	patches.kernel.org/6.12.40-140-clone_private_mnt-make-sure-that-caller-has-C.patch
 	patches.kernel.org/6.12.40-141-btrfs-fix-block-group-refcount-race-in-btrfs_.patch
+	patches.kernel.org/6.12.40-142-usb-hub-fix-detection-of-high-tier-USB3-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
