--- a/series.conf
+++ b/series.conf
@@ -8728,6 +8728,7 @@
 	patches.kernel.org/6.12.40-077-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-.patch
 	patches.kernel.org/6.12.40-078-comedi-Fix-some-signed-shift-left-operations.patch
 	patches.kernel.org/6.12.40-079-comedi-Fix-use-of-uninitialized-data-in-insn_.patch
+	patches.kernel.org/6.12.40-080-comedi-Fix-initialization-of-data-for-instruc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
