--- a/series.conf
+++ b/series.conf
@@ -8739,6 +8739,7 @@
 	patches.kernel.org/6.12.40-088-cachefiles-Fix-the-incorrect-return-value-in-.patch
 	patches.kernel.org/6.12.40-089-net-emaclite-Fix-missing-pointer-increment-in.patch
 	patches.kernel.org/6.12.40-090-block-fix-kobject-leak-in-blk_unregister_queu.patch
+	patches.kernel.org/6.12.40-091-net-sched-sch_qfq-Fix-race-condition-on-qfq_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
