comedi: das16m1: Fix bit shift out of bounds (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8723,6 +8723,7 @@
 	patches.kernel.org/6.12.40-072-iio-common-st_sensors-Fix-use-of-uninitialize.patch
 	patches.kernel.org/6.12.40-073-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.12.40-074-comedi-aio_iiro_16-Fix-bit-shift-out-of-bound.patch
+	patches.kernel.org/6.12.40-075-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
