--- a/series.conf
+++ b/series.conf
@@ -8720,6 +8720,7 @@
 	patches.kernel.org/6.12.40-069-iio-adc-max1363-Reorder-mode_list-entries.patch
 	patches.kernel.org/6.12.40-070-iio-adc-stm32-adc-Fix-race-in-installing-chai.patch
 	patches.kernel.org/6.12.40-071-iio-backend-fix-out-of-bound-write.patch
+	patches.kernel.org/6.12.40-072-iio-common-st_sensors-Fix-use-of-uninitialize.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
