nvmem: layouts: u-boot-env: remove crc32 endianness conversion (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8664,6 +8664,7 @@
 	patches.kernel.org/6.12.40-013-thunderbolt-Fix-bit-masking-in-tb_dp_port_set.patch
 	patches.kernel.org/6.12.40-014-Revert-staging-vchiq_arm-Create-keep-alive-th.patch
 	patches.kernel.org/6.12.40-015-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
+	patches.kernel.org/6.12.40-016-nvmem-layouts-u-boot-env-remove-crc32-endiann.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
