HID: core: ensure the allocated report buffer can contain the reserved report ID (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8669,6 +8669,7 @@
 	patches.kernel.org/6.12.40-018-pch_uart-Fix-dma_sync_sg_for_device-nents-val.patch
 	patches.kernel.org/6.12.40-019-spi-Add-check-for-8-bit-transfer-with-8-IO-mo.patch
 	patches.kernel.org/6.12.40-020-dm-bufio-fix-sched-in-atomic-context.patch
+	patches.kernel.org/6.12.40-021-HID-core-ensure-the-allocated-report-buffer-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
