riscv: Enable interrupt during exception handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8758,6 +8758,7 @@
 	patches.kernel.org/6.12.40-107-ice-check-correct-pointer-in-fwlog-debugfs.patch
 	patches.kernel.org/6.12.40-108-usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.kernel.org/6.12.40-109-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
+	patches.kernel.org/6.12.40-110-riscv-Enable-interrupt-during-exception-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
