drm/amd/display: Free memory allocation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8679,6 +8679,7 @@
 	patches.kernel.org/6.12.40-028-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-th.patch
 	patches.kernel.org/6.12.40-029-drm-amdgpu-Increase-reset-counter-only-on-suc.patch
 	patches.kernel.org/6.12.40-030-drm-amd-display-Disable-CRTC-degamma-LUT-for-.patch
+	patches.kernel.org/6.12.40-031-drm-amd-display-Free-memory-allocation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
