--- a/series.conf
+++ b/series.conf
@@ -8650,6 +8650,7 @@
 	patches.kernel.org/6.12.39-166-KVM-SVM-Set-synthesized-TSA-CPUID-flags.patch
 	patches.kernel.org/6.12.39-167-Linux-6.12.39.patch
 	patches.kernel.org/6.12.40-001-phy-tegra-xusb-Fix-unbalanced-regulator-disab.patch
+	patches.kernel.org/6.12.40-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_O.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
