memstick: core: Zero initialize id_reg in h_memstick_read_dev_id() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8701,6 +8701,7 @@
 	patches.kernel.org/6.12.40-050-cpuidle-psci-Fix-cpuhotplug-routine-with-PREE.patch
 	patches.kernel.org/6.12.40-051-dmaengine-nbpfaxi-Fix-memory-corruption-in-pr.patch
 	patches.kernel.org/6.12.40-052-isofs-Verify-inode-mode-when-loading-from-dis.patch
+	patches.kernel.org/6.12.40-053-memstick-core-Zero-initialize-id_reg-in-h_mem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
