--- a/series.conf
+++ b/series.conf
@@ -8715,6 +8715,7 @@
 	patches.kernel.org/6.12.40-064-soc-aspeed-lpc-snoop-Cleanup-resources-in-sta.patch
 	patches.kernel.org/6.12.40-065-soc-aspeed-lpc-snoop-Don-t-disable-channels-t.patch
 	patches.kernel.org/6.12.40-066-iio-accel-fxls8962af-Fix-use-after-free-in-fx.patch
+	patches.kernel.org/6.12.40-067-iio-adc-axp20x_adc-Add-missing-sentinel-to-AX.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
