nvmet-tcp: fix callback lock for TLS handshake (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8748,6 +8748,7 @@
 	patches.kernel.org/6.12.40-097-smc-Fix-various-oops-due-to-inet_sock-type-co.patch
 	patches.kernel.org/6.12.40-098-net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.kernel.org/6.12.40-099-nvme-fix-misaccounting-of-nvme-mpath-inflight.patch
+	patches.kernel.org/6.12.40-100-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
