--- a/series.conf
+++ b/series.conf
@@ -8667,6 +8667,7 @@
 	patches.kernel.org/6.12.40-016-nvmem-layouts-u-boot-env-remove-crc32-endiann.patch
 	patches.kernel.org/6.12.40-017-Input-xpad-set-correct-controller-type-for-Ac.patch
 	patches.kernel.org/6.12.40-018-pch_uart-Fix-dma_sync_sg_for_device-nents-val.patch
+	patches.kernel.org/6.12.40-019-spi-Add-check-for-8-bit-transfer-with-8-IO-mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
