arm64: dts: imx8mp-venice-gw73xx: fix TPM SPI frequency (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8693,6 +8693,7 @@
 	patches.kernel.org/6.12.40-042-arm64-dts-freescale-imx8mm-verdin-Keep-LDO5-a.patch
 	patches.kernel.org/6.12.40-043-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-044-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fr.patch
+	patches.kernel.org/6.12.40-045-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
