net/mlx5: Correctly set gso_size when LRO is used (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8766,6 +8766,7 @@
 	patches.kernel.org/6.12.40-115-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER.patch
 	patches.kernel.org/6.12.40-116-Bluetooth-hci_core-add-missing-braces-when-us.patch
 	patches.kernel.org/6.12.40-117-Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM.patch
+	patches.kernel.org/6.12.40-118-net-mlx5-Correctly-set-gso_size-when-LRO-is-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
