--- a/series.conf
+++ b/series.conf
@@ -8712,6 +8712,7 @@
 	patches.kernel.org/6.12.40-061-pmdomain-governor-Consider-CPU-latency-tolera.patch
 	patches.kernel.org/6.12.40-062-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr.patch
 	patches.kernel.org/6.12.40-063-smb-client-fix-use-after-free-in-crypt_messag.patch
+	patches.kernel.org/6.12.40-064-soc-aspeed-lpc-snoop-Cleanup-resources-in-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
