--- a/series.conf
+++ b/series.conf
@@ -8731,6 +8731,7 @@
 	patches.kernel.org/6.12.40-080-comedi-Fix-initialization-of-data-for-instruc.patch
 	patches.kernel.org/6.12.40-081-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 	patches.kernel.org/6.12.40-082-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
+	patches.kernel.org/6.12.40-083-soundwire-amd-fix-for-handling-slave-alerts-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
