--- a/series.conf
+++ b/series.conf
@@ -8700,6 +8700,7 @@
 	patches.kernel.org/6.12.40-049-Bluetooth-btintel-Check-if-controller-is-ISO-.patch
 	patches.kernel.org/6.12.40-050-cpuidle-psci-Fix-cpuhotplug-routine-with-PREE.patch
 	patches.kernel.org/6.12.40-051-dmaengine-nbpfaxi-Fix-memory-corruption-in-pr.patch
+	patches.kernel.org/6.12.40-052-isofs-Verify-inode-mode-when-loading-from-dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
