hv_netvsc: Set VF priv_flags to IFF_NO_ADDRCONF before open to prevent IPv6 addrconf (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8774,6 +8774,7 @@
 	patches.kernel.org/6.12.40-123-drm-xe-pf-Move-VFs-reprovisioning-to-worker.patch
 	patches.kernel.org/6.12.40-124-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prio.patch
 	patches.kernel.org/6.12.40-125-Bluetooth-L2CAP-Fix-attempting-to-adjust-outg.patch
+	patches.kernel.org/6.12.40-126-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCON.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
