--- a/series.conf
+++ b/series.conf
@@ -8791,6 +8791,7 @@
 	patches.kernel.org/6.12.40-140-clone_private_mnt-make-sure-that-caller-has-C.patch
 	patches.kernel.org/6.12.40-141-btrfs-fix-block-group-refcount-race-in-btrfs_.patch
 	patches.kernel.org/6.12.40-142-usb-hub-fix-detection-of-high-tier-USB3-devic.patch
+	patches.kernel.org/6.12.40-143-usb-hub-Fix-flushing-and-scheduling-of-delaye.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
