--- a/series.conf
+++ b/series.conf
@@ -8689,6 +8689,7 @@
 	patches.kernel.org/6.12.40-038-phonet-pep-Move-call-to-pn_skb_get_dst_sockad.patch
 	patches.kernel.org/6.12.40-039-net-mlx5-Update-the-list-of-the-PCI-supported.patch
 	patches.kernel.org/6.12.40-040-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fr.patch
+	patches.kernel.org/6.12.40-041-arm64-dts-add-big-endian-property-back-into-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
