iio: backend: fix out-of-bound write (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8719,6 +8719,7 @@
 	patches.kernel.org/6.12.40-068-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_.patch
 	patches.kernel.org/6.12.40-069-iio-adc-max1363-Reorder-mode_list-entries.patch
 	patches.kernel.org/6.12.40-070-iio-adc-stm32-adc-Fix-race-in-installing-chai.patch
+	patches.kernel.org/6.12.40-071-iio-backend-fix-out-of-bound-write.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
