--- a/series.conf
+++ b/series.conf
@@ -8680,6 +8680,7 @@
 	patches.kernel.org/6.12.40-029-drm-amdgpu-Increase-reset-counter-only-on-suc.patch
 	patches.kernel.org/6.12.40-030-drm-amd-display-Disable-CRTC-degamma-LUT-for-.patch
 	patches.kernel.org/6.12.40-031-drm-amd-display-Free-memory-allocation.patch
+	patches.kernel.org/6.12.40-032-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
