--- a/series.conf
+++ b/series.conf
@@ -8800,6 +8800,7 @@
 	patches.kernel.org/6.12.40-149-selftests-bpf-Set-test-path-for-token-obj_pri.patch
 	patches.kernel.org/6.12.40-150-i2c-omap-Add-support-for-setting-mux.patch
 	patches.kernel.org/6.12.40-151-i2c-omap-Fix-an-error-handling-path-in-omap_i.patch
+	patches.kernel.org/6.12.40-152-i2c-omap-Handle-omap_i2c_init-errors-in-omap_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
