drm/amdgpu: Increase reset counter only on success (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8677,6 +8677,7 @@
 	patches.kernel.org/6.12.40-026-tracing-osnoise-Fix-crash-in-timerlat_dump_st.patch
 	patches.kernel.org/6.12.40-027-objtool-rust-add-one-more-noreturn-Rust-funct.patch
 	patches.kernel.org/6.12.40-028-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-th.patch
+	patches.kernel.org/6.12.40-029-drm-amdgpu-Increase-reset-counter-only-on-suc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
