dm-bufio: fix sched in atomic context (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8668,6 +8668,7 @@
 	patches.kernel.org/6.12.40-017-Input-xpad-set-correct-controller-type-for-Ac.patch
 	patches.kernel.org/6.12.40-018-pch_uart-Fix-dma_sync_sg_for_device-nents-val.patch
 	patches.kernel.org/6.12.40-019-spi-Add-check-for-8-bit-transfer-with-8-IO-mo.patch
+	patches.kernel.org/6.12.40-020-dm-bufio-fix-sched-in-atomic-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
