--- a/series.conf
+++ b/series.conf
@@ -8784,6 +8784,7 @@
 	patches.kernel.org/6.12.40-133-rxrpc-Fix-transmission-of-an-abort-in-respons.patch
 	patches.kernel.org/6.12.40-134-Revert-cgroup_freezer-cgroup_freezing-Check-i.patch
 	patches.kernel.org/6.12.40-135-drm-mediatek-Add-wait_event_timeout-when-disa.patch
+	patches.kernel.org/6.12.40-136-drm-mediatek-only-announce-AFBC-if-really-sup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
