drm/xe/pf: Move VFs reprovisioning to worker (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8771,6 +8771,7 @@
 	patches.kernel.org/6.12.40-120-net-fix-segmentation-after-TCP-UDP-fraglist-G.patch
 	patches.kernel.org/6.12.40-121-netfilter-nf_conntrack-fix-crash-due-to-remov.patch
 	patches.kernel.org/6.12.40-122-drm-xe-pf-Sanitize-VF-scratch-registers-on-FL.patch
+	patches.kernel.org/6.12.40-123-drm-xe-pf-Move-VFs-reprovisioning-to-worker.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
