--- a/series.conf
+++ b/series.conf
@@ -8681,6 +8681,7 @@
 	patches.kernel.org/6.12.40-030-drm-amd-display-Disable-CRTC-degamma-LUT-for-.patch
 	patches.kernel.org/6.12.40-031-drm-amd-display-Free-memory-allocation.patch
 	patches.kernel.org/6.12.40-032-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-1.patch
+	patches.kernel.org/6.12.40-033-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
