Revert "staging: vchiq_arm: Create keep-alive thread during probe" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8662,6 +8662,7 @@
 	patches.kernel.org/6.12.40-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.kernel.org/6.12.40-012-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.kernel.org/6.12.40-013-thunderbolt-Fix-bit-masking-in-tb_dp_port_set.patch
+	patches.kernel.org/6.12.40-014-Revert-staging-vchiq_arm-Create-keep-alive-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
