--- a/series.conf
+++ b/series.conf
@@ -8691,6 +8691,7 @@
 	patches.kernel.org/6.12.40-040-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fr.patch
 	patches.kernel.org/6.12.40-041-arm64-dts-add-big-endian-property-back-into-w.patch
 	patches.kernel.org/6.12.40-042-arm64-dts-freescale-imx8mm-verdin-Keep-LDO5-a.patch
+	patches.kernel.org/6.12.40-043-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
