selftests: net: increase inter-packet timeout in udpgro.sh (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8752,6 +8752,7 @@
 	patches.kernel.org/6.12.40-101-wifi-cfg80211-remove-scan-request-n_channels-.patch
 	patches.kernel.org/6.12.40-102-can-tcan4x5x-add-option-for-selecting-nWKRQ-v.patch
 	patches.kernel.org/6.12.40-103-can-tcan4x5x-fix-reset-gpio-usage-during-prob.patch
+	patches.kernel.org/6.12.40-104-selftests-net-increase-inter-packet-timeout-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
