--- a/series.conf
+++ b/series.conf
@@ -8713,6 +8713,7 @@
 	patches.kernel.org/6.12.40-062-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr.patch
 	patches.kernel.org/6.12.40-063-smb-client-fix-use-after-free-in-crypt_messag.patch
 	patches.kernel.org/6.12.40-064-soc-aspeed-lpc-snoop-Cleanup-resources-in-sta.patch
+	patches.kernel.org/6.12.40-065-soc-aspeed-lpc-snoop-Don-t-disable-channels-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
