net: libwx: fix the using of Rx buffer DMA (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8707,6 +8707,7 @@
 	patches.kernel.org/6.12.40-056-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.kernel.org/6.12.40-057-net-stmmac-intel-populate-entire-system_count.patch
 	patches.kernel.org/6.12.40-058-net-libwx-remove-duplicate-page_pool_put_full.patch
+	patches.kernel.org/6.12.40-059-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
