Bluetooth: hci_sync: fix connectable extended advertising when using static random address (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8761,6 +8761,7 @@
 	patches.kernel.org/6.12.40-110-riscv-Enable-interrupt-during-exception-handl.patch
 	patches.kernel.org/6.12.40-111-riscv-traps_misaligned-properly-sign-extend-v.patch
 	patches.kernel.org/6.12.40-112-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_re.patch
+	patches.kernel.org/6.12.40-113-Bluetooth-hci_sync-fix-connectable-extended-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
