--- a/series.conf
+++ b/series.conf
@@ -8654,6 +8654,7 @@
 	patches.kernel.org/6.12.40-003-phy-tegra-xusb-Disable-periodic-tracking-on-T.patch
 	patches.kernel.org/6.12.40-004-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
 	patches.kernel.org/6.12.40-005-USB-serial-option-add-Foxconn-T99W640.patch
+	patches.kernel.org/6.12.40-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
