--- a/series.conf
+++ b/series.conf
@@ -8757,6 +8757,7 @@
 	patches.kernel.org/6.12.40-106-ice-add-NULL-check-in-eswitch-lag-check.patch
 	patches.kernel.org/6.12.40-107-ice-check-correct-pointer-in-fwlog-debugfs.patch
 	patches.kernel.org/6.12.40-108-usb-net-sierra-check-for-no-status-endpoint.patch
+	patches.kernel.org/6.12.40-109-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
