--- a/series.conf
+++ b/series.conf
@@ -8699,6 +8699,7 @@
 	patches.kernel.org/6.12.40-048-af_packet-fix-soft-lockup-issue-caused-by-tpa.patch
 	patches.kernel.org/6.12.40-049-Bluetooth-btintel-Check-if-controller-is-ISO-.patch
 	patches.kernel.org/6.12.40-050-cpuidle-psci-Fix-cpuhotplug-routine-with-PREE.patch
+	patches.kernel.org/6.12.40-051-dmaengine-nbpfaxi-Fix-memory-corruption-in-pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
