--- a/series.conf
+++ b/series.conf
@@ -8745,6 +8745,7 @@
 	patches.kernel.org/6.12.40-094-fix-a-leak-in-fcntl_dirnotify.patch
 	patches.kernel.org/6.12.40-095-nvme-fix-inconsistent-RCU-list-manipulation-i.patch
 	patches.kernel.org/6.12.40-096-nvme-fix-endianness-of-command-word-prints-in.patch
+	patches.kernel.org/6.12.40-097-smc-Fix-various-oops-due-to-inet_sock-type-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
