--- a/series.conf
+++ b/series.conf
@@ -8660,6 +8660,7 @@
 	patches.kernel.org/6.12.40-009-usb-gadget-configfs-Fix-OOB-read-on-empty-str.patch
 	patches.kernel.org/6.12.40-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.kernel.org/6.12.40-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
+	patches.kernel.org/6.12.40-012-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
