Bluetooth: Fix null-ptr-deref in l2cap_sock_resume_cb() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8760,6 +8760,7 @@
 	patches.kernel.org/6.12.40-109-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
 	patches.kernel.org/6.12.40-110-riscv-Enable-interrupt-during-exception-handl.patch
 	patches.kernel.org/6.12.40-111-riscv-traps_misaligned-properly-sign-extend-v.patch
+	patches.kernel.org/6.12.40-112-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
