--- a/series.conf
+++ b/series.conf
@@ -8673,6 +8673,7 @@
 	patches.kernel.org/6.12.40-022-HID-core-ensure-__hid_request-reserves-the-re.patch
 	patches.kernel.org/6.12.40-023-HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.kernel.org/6.12.40-024-tracing-probes-Avoid-using-params-uninitializ.patch
+	patches.kernel.org/6.12.40-025-tracing-Add-down_write-trace_event_sem-when-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
