Bluetooth: SMP: Fix using HCI_ERROR_REMOTE_USER_TERM on timeout (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8763,6 +8763,7 @@
 	patches.kernel.org/6.12.40-112-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_re.patch
 	patches.kernel.org/6.12.40-113-Bluetooth-hci_sync-fix-connectable-extended-a.patch
 	patches.kernel.org/6.12.40-114-Bluetooth-SMP-If-an-unallowed-command-is-rece.patch
+	patches.kernel.org/6.12.40-115-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
