Bluetooth: hci_core: add missing braces when using macro parameters (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8764,6 +8764,7 @@
 	patches.kernel.org/6.12.40-113-Bluetooth-hci_sync-fix-connectable-extended-a.patch
 	patches.kernel.org/6.12.40-114-Bluetooth-SMP-If-an-unallowed-command-is-rece.patch
 	patches.kernel.org/6.12.40-115-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER.patch
+	patches.kernel.org/6.12.40-116-Bluetooth-hci_core-add-missing-braces-when-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
