--- a/series.conf
+++ b/series.conf
@@ -8730,6 +8730,7 @@
 	patches.kernel.org/6.12.40-079-comedi-Fix-use-of-uninitialized-data-in-insn_.patch
 	patches.kernel.org/6.12.40-080-comedi-Fix-initialization-of-data-for-instruc.patch
 	patches.kernel.org/6.12.40-081-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
+	patches.kernel.org/6.12.40-082-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
