--- a/series.conf
+++ b/series.conf
@@ -8684,6 +8684,7 @@
 	patches.kernel.org/6.12.40-033-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix.patch
 	patches.kernel.org/6.12.40-034-io_uring-poll-fix-POLLERR-handling.patch
 	patches.kernel.org/6.12.40-035-mptcp-make-fallback-action-and-fallback-decis.patch
+	patches.kernel.org/6.12.40-036-mptcp-plug-races-between-subflow-fail-and-sub.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
