virtio-net: fix recursived rtnl_lock() during probe() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8775,6 +8775,7 @@
 	patches.kernel.org/6.12.40-124-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prio.patch
 	patches.kernel.org/6.12.40-125-Bluetooth-L2CAP-Fix-attempting-to-adjust-outg.patch
 	patches.kernel.org/6.12.40-126-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCON.patch
+	patches.kernel.org/6.12.40-127-virtio-net-fix-recursived-rtnl_lock-during-pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
