selftests/bpf: Set test path for token/obj_priv_implicit_token_envvar (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8797,6 +8797,7 @@
 	patches.kernel.org/6.12.40-146-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
 	patches.kernel.org/6.12.40-147-net-libwx-fix-multicast-packets-received-coun.patch
 	patches.kernel.org/6.12.40-148-rust-use-used-compiler-to-fix-build-and-modpo.patch
+	patches.kernel.org/6.12.40-149-selftests-bpf-Set-test-path-for-token-obj_pri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
